--- a/src/components/Navigation/Nav.css
+++ b/src/components/Navigation/Nav.css
@@ -1,24 +1,30 @@
-nav > ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  list-style: none;
-  background-color: khaki;
-  padding: 0.5vh;
+nav {
+  box-shadow: 0px 3px 8px 3px #83b5d1;
 }
 
-nav a {
-  padding: 1vh 1vw;
-  margin: 1vh 1vw;
-  background-color: green;
-  border-radius: 10px;
-  width: 10%;
-  height: 10%;
-  border: 1px solid green;
+nav ul {
+  margin: 0 0 0 auto;
+}
+
+nav ul a {
+  display: inline-block;
+  margin: 0 0.8em;
+  color: #7f557d;
   text-decoration: none;
-  color: white;
+  border-radius: 50%;
+  padding: 0.5em;
+  text-transform: uppercase;
+}
+
+nav > img {
+  width: 8%;
+  height: auto;
+  margin-left: 10px;
 }
 
 nav a:hover {
-  border: 1px solid red;
+  font-weight: normal;
+  border-radius: 10%;
+  background-color: #71a2c3;
+  color: #7f557d;
 }
