--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,82 @@
 @import "./components/Navigation/Nav.css";
+@import "./App.css";
 
-* {
-  box-sizing: border-box;
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
-  background-color: darkslategrey;
+  box-sizing: inherit;
+}
+
+a {
+  text-decoration: none;
+}
+
+html {
+  font-family: "Arial", "Times New Roman", Times, serif;
+  font-size: 16px;
+  box-sizing: border-box;
+}
+
+#root {
+  height: auto;
+  width: auto;
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  position: relative;
+  min-height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+body {
+  background-image: url("./assets/img/business8.jpg");
+  background-position: 20% 82%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+main {
+  padding-bottom: 5em;
+}
+
+nav,
+footer {
+  background-color: #83b5d1;
+  width: 100%;
+  display: flex;
+  font-size: 1.5rem;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 0;
+  padding: 0rem 4rem 0 3rem;
+  margin: 0%;
+  height: 120px;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0.01);
+}
+
+::-webkit-scrollbar-thumb {
+  background: #4d6d72;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #4d6d72;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type="number"] {
+  -moz-appearance: textfield;
 }
